WindGroup Dev/src/objects/PULL_Toilet_Feedback__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AWS_Field_Label__c</fullName>
        <label>AWS Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Object_Label__c</fullName>
        <label>AWS Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Sort_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Sort Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Field__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object_Name__c</fullName>
        <label>Salesforce Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Sort_Field_API_Name__c</fullName>
        <label>Salesforce Sort Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PULL Toilet Feedback</label>
</CustomObject>